--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -4,7 +4,12 @@ $size__site-sidebar		: 25%;
 $size__default-bot-marg	: 1.5em;
 $size__max-width 		: 1000px;
 
+$size__footer-height 	: 120px;
+
+$bp__footer-address 	: 400px;
 $bp__menu-button		: 600px;
 $bp__tablet				: 768px;
+$bp__footer-final 		: 850px;
+$bp__footer-menu 		: 900px;
 $bp__laptop				: 1000px;
 
