--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -1,10 +1,11 @@
 /*--------------------------------------------------------------
-5.1 Links
+## Links
 --------------------------------------------------------------*/
 @import "links";
 
 /*--------------------------------------------------------------
-5.2 Menus
+## Menus
 --------------------------------------------------------------*/
 @import "menus";
 @import "social";
+@import "footer";
