--- a/sass/site/global/_header.scss
+++ b/sass/site/global/_header.scss
@@ -2,6 +2,7 @@
 	// DO NOT ADD PADDING HERE! - it screws up menus
 	overflow 		: auto;
 	margin-bottom	: $size__default-bot-marg;
+	background-color: $color__bg-header;
 
 	@media only screen and (min-width: $bp__menu-button+1) {
 		overflow 	: visible;
