--- a/sass/site/global/_header.scss
+++ b/sass/site/global/_header.scss
@@ -1,7 +1,6 @@
 .site-header {
 	// DO NOT ADD PADDING HERE! - it screws up menus
 	overflow 		: auto;
-	margin-bottom	: $size__default-bot-marg;
 	background-color: $color__bg-header;
 
 	@media only screen and (min-width: $bp__menu-button+1) {
@@ -10,19 +9,49 @@
 }
 
 .site-branding {
-	padding		: 1em;
 	margin		: 0 auto;
+	position 	: relative;
 }
 
 .site-title {
-	text-align: center;
+	text-align 	: center;
+	margin 		: 0;
 
 	a {
 		color 			: $color__text-site-title;
 		text-decoration : none;
+		display 		: block;
 	}
 }
 
 .site-description {
 	text-align: center;
+}
+
+.link-refer {
+	text-decoration : none;
+	color 			: $red;
+	//color 			: $orange;
+	margin-top 		: 1em;
+	width 			: 100%;
+	display 		: block;
+	text-align 		: center;
+
+	&:visited,
+	&:focus,
+	&:hover {
+		color: darken( $red, 5% );
+		font-weight: 700;
+	}
+
+	@media only screen and (min-width: $bp__footer-final) {
+		position	: absolute;
+		bottom 		: 1em;
+		right 		: 2.5%;
+		width 		: auto;
+	}
+}
+
+.orange {
+	color: $orange;
 }
