--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -2,6 +2,7 @@
 10.1 Posts and pages
 --------------------------------------------------------------*/
 @import "primary/posts-and-pages";
+@import "primary/home";
 
 /*--------------------------------------------------------------
 10.2 Asides
