--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -29,11 +29,50 @@
 	margin: 0 0 1.5em;
 }
 
+.site {
+	position: relative;
+}
+
 .site-content {
+	@extend %bgimage;
 	width 		: 100%;
-	margin 		: 0 auto $size__default-bot-marg;
-	overflow 	: auto;
-	max-width 	: $size__max-width;
+	margin 		: 0 auto;
+
+	@media only screen and (min-width: $bp__tablet) {
+		background-image: url(images/bg.jpg);
+		position 		: relative;
+	}
+
+	&:before {
+		@media only screen and (min-width: $bp__circles) {
+			width 				: 100%;
+			position 			: absolute;
+			bottom 				: 95px;
+			background-image 	: url(images/stripes2.png);
+			background-repeat 	: no-repeat;
+			background-position : 50px 0;
+			height 				: 263px;
+			z-index 			: 2;
+			display 			: block;
+		}
+
+		@media only screen and (min-width: $bp__laptop) {
+			background-position : 100px 0;
+		}
+
+		@media only screen and (min-width: $bp__super-wide) {
+			background-position : right 0;
+		}
+	}
+
+	&:after {
+		@media only screen and (min-width: $bp__circles) {
+			width 			: 100%;
+			height 			: 200px;
+			//background-color: $darkorange;
+			background-color: $teal;
+		}
+	}
 }
 
 .content-area {
@@ -42,14 +81,16 @@
 	overflow 	: auto;
 	padding 	: 1em;
 
-	@media only screen and (min-width: $bp__tablet) {
-		width 	: 70%;
-		margin 	: 0 2.5% 0 0;
-		float 	: left;
+	@media only screen and (min-width: $bp__circles) {
+		margin-bottom: 120px;
 
-		&.sidebar-content {
-			float 	: right;
-			margin 	: 0 0 0 2.5%;
+		.home & {
+			margin-bottom: 0;
+		}
+
+		&.content-sidebar {
+			width: 70%;
+			float: left;
 		}
 	}
 }
