--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -3,16 +3,20 @@ $med		: #ccc;
 $dark		: #020202;
 
 $red 		: #FD4F57;
+$darkerorange: #e4510d;
 $darkorange : #f36e31;
 $orange 	: #f36d32;
 $liteorange : #f8992f;
 $yellow 	: #ffcf2d;
 $green 		: #d9e01f;
 $teal 		: #05b7af;
+$darkteal 	: darken( $teal, 5% );
 $cream 		: #fffbef;
 
+$transred 	: rgba( $red, 0.95 );
+
 // Backgrounds
-$color__background-body		: $light;
+$color__background-body		: $cream;
 $color__background-screen	: #f1f1f1;
 $color__background-hr		: $med;
 $color__background-pre		: $med;
@@ -28,9 +32,9 @@ $color__bg-footer 			: $cream;
 $color__text-screen			: $teal;
 $color__text-input			: $dark;
 $color__text-input-focus	: $dark;
-$color__link				: royalblue;
-$color__link-visited		: purple;
-$color__link-hover			: midnightblue;
+$color__link				: darken( $darkorange, 10% );
+$color__link-visited		: darken( $teal, 5% );
+$color__link-hover			: $orange;
 $color__text-main			: #404040;
 $color__text-social 		: $light;
 $color__text-ins 			: $dark;
@@ -58,22 +62,51 @@ $color__shadow-button-inner-focus 	: rgba(255, 255, 255, 0.5);
 $color__shadow-button-inner-2-focus : rgba(0, 0, 0, 0.15);
 
 // Menu colors
-$color__bg-menu-button			: $teal;
-$color__bg-menu-button-mobile 	: $teal;
-$color__bg-menu-button-pseudo 	: $teal;
-$color__bg-menu 				: $teal;
-$color__bg-menu-item			: $teal;
-$color__bg-menu-item-mobile		: $teal;
+$color__bg-menu-button			: $red;
+$color__bg-menu-button-mobile 	: $red;
+$color__bg-menu-button-pseudo 	: $red;
+$color__bg-menu 				: $red;
+$color__bg-menu-item			: $red;
+$color__bg-menu-item-hover		: $light;
+$color__bg-menu-item-mobile		: $red;
 $color__bg-menu-current			: $light;
 $color__bg-menu-current-hover	: $light;
 
 $color__text-menu				: $light;
-$color__text-menu-hover			: darken( $color__bg-menu-item, 25% );
+$color__text-menu-hover			: $red;
 $color__text-menu-mobile		: $light;
 $color__text-menu-mobile-hover 	: $dark;
 $color__text-menu-button		: $light;
 $color__text-menu-button-mobile : $light;
 $color__text-menu-button-pseudo : $light;
-$color__text-menu-current		: $teal;
-$color__text-menu-current-hover	: $teal;
+$color__text-menu-current		: $red;
+$color__text-menu-current-hover-mobile	: $dark;
+$color__text-menu-current-hover : $red;
 $color__text-submenu			: $light;
+
+// Login Page
+$bg__logo 						: url(images/logo.png);
+
+
+$bg__login-page 				: $light;
+$bg__login-container 			: transparent;
+$bg__login-form-box 			: $darkerorange;
+$bg__login-form-input 			: $light;
+$bg__button-submit 				: $darkteal;
+$bg__button-submit-pseudo 		: darken( $darkteal, 10% );
+$bg__nav 						: transparent;
+$bg__checkbox 					: $light;
+
+$color__text-login-form 		: $dark;
+$color__text-login-form-label 	: $light;
+$color__text-form-input 		: $dark;
+$color__text-button-submit 		: $light;
+$color__text-submit-pseudo 		: $light;
+$color__text-nav-link 			: $dark;
+$color__text-nav-link-pseudo 	: $med;
+$color__text-checkbox 			: $light;
+
+$color__border-input-pseudo 	: $med;
+
+$color__shadow-input-pseudo 	: $med;
+
